feat: add EJS setup and improve homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,6 +107,21 @@
                         <span class="endpoint">/api/trades/:symbol</span>
                         <div class="description">دریافت لیست معاملات اخیر</div>
                     </div>
+                    <div class="api-endpoint">
+                        <span class="method get">GET</span>
+                        <span class="endpoint">/api/market/stats</span>
+                        <div class="description">دریافت آمار بازار</div>
+                    </div>
+                    <div class="api-endpoint">
+                        <span class="method get">GET</span>
+                        <span class="endpoint">/api/udf/history</span>
+                        <div class="description">دریافت آمار OHLC بازار</div>
+                    </div>
+                    <div class="api-endpoint">
+                        <span class="method get">GET</span>
+                        <span class="endpoint">/api/global/stats</span>
+                        <div class="description">دریافت آمار بازار جهانی</div>
+                    </div>
                 </div>
 
                 <div class="api-section">
